--- a/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/references.bib
+++ b/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/references.bib
@@ -5,3 +5,11 @@
 	year={2019},
 	publisher={O'Reilly Media}
 }
+@misc{wilson2018marginal,
+	title={The Marginal Value of Adaptive Gradient Methods in Machine Learning}, 
+	author={Ashia C. Wilson and Rebecca Roelofs and Mitchell Stern and Nathan Srebro and Benjamin Recht},
+	year={2018},
+	eprint={1705.08292},
+	publisher={arXiv: 1705.08292},
+	primaryClass={stat.ML}
+}
